[gd_scene load_steps=6 format=2]

[ext_resource path="res://System/UI/Themes/ScriptDebugger.tres" type="Theme" id=1]
[ext_resource path="res://System/UI/tools/ScriptDebugger.gd" type="Script" id=2]
[ext_resource path="res://System/UI/tools/MousePos.gd" type="Script" id=3]
[ext_resource path="res://System/UI/tools/TimeDisplay.gd" type="Script" id=4]
[ext_resource path="res://System/UI/tools/FPSDisplay.gd" type="Script" id=5]

[node name="ScriptDebugger" type="Control" groups=["ScriptDebugger"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -262.0
margin_bottom = -46.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
step = NodePath("vbox/buttons/Step")
allev = NodePath("vbox/buttons/AllEv")
pause = NodePath("vbox/buttons/Pause")
speed = NodePath("vbox/buttons/Speed")
node_scripts = NodePath("vbox/Control/Scripts")
current_script = NodePath("vbox/Control/Scripts/CurrentScript")

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.88
margin_bottom = 0.0799866

[node name="Control" type="Control" parent="vbox"]
margin_right = 250.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Scripts" type="TabContainer" parent="vbox/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0390015
tab_align = 0

[node name="CurrentScript" type="Control" parent="vbox/Control/Scripts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 29.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CurrentScriptEditor" type="TextEdit" parent="vbox/Control/Scripts/CurrentScript"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_stretch_ratio = 0.75
text = "line 1 this is a really long line that may wrap an arbitrary number of 
line 2
line 3"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
bookmark_gutter = true
breakpoint_gutter = true
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="vbox/Control/Scripts/CurrentScript"]
margin_top = -13.0
margin_right = 242.0
margin_bottom = -2.0

[node name="FilenameLabel" type="Label" parent="vbox/Control/Scripts/CurrentScript/HBoxContainer"]
margin_right = 27.0
margin_bottom = 11.0
text = "Script:"

[node name="ScreenLabel" type="Label" parent="vbox/Control/Scripts/CurrentScript/HBoxContainer"]
margin_left = 31.0
margin_right = 63.0
margin_bottom = 11.0
text = "Screen:"

[node name="buttons" type="HBoxContainer" parent="vbox"]
margin_top = 304.0
margin_right = 250.0
margin_bottom = 321.0

[node name="AllEv" type="Button" parent="vbox/buttons"]
margin_right = 33.0
margin_bottom = 17.0
text = "AllEv"

[node name="Pause" type="Button" parent="vbox/buttons"]
margin_left = 37.0
margin_right = 75.0
margin_bottom = 17.0
text = "Pause"

[node name="Step" type="Button" parent="vbox/buttons"]
margin_left = 79.0
margin_right = 110.0
margin_bottom = 17.0
text = "Step"

[node name="Speed" type="Button" parent="vbox/buttons"]
margin_left = 114.0
margin_right = 141.0
margin_bottom = 17.0
text = ">>>"

[node name="displays" type="HBoxContainer" parent="vbox"]
margin_top = 325.0
margin_right = 250.0
margin_bottom = 336.0

[node name="FPS" type="Label" parent="vbox/displays"]
margin_right = 31.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 104, 33 )
text = "Mouse:"
script = ExtResource( 5 )

[node name="MousePos" type="Label" parent="vbox/displays"]
margin_left = 35.0
margin_right = 66.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 104, 33 )
text = "Mouse:"
script = ExtResource( 3 )

[node name="Timer" type="Label" parent="vbox/displays"]
margin_left = 70.0
margin_right = 97.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 104, 33 )
text = "Timer:"
script = ExtResource( 4 )

[node name="GotoLineButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.592157 )
margin_left = -1.0
margin_top = 31.0
margin_right = 15.0
margin_bottom = 45.0
text = ">"
